syntax = "proto3";

package inventory;

option java_multiple_files = true;
option java_package = "github.io.truongbn.inventory";

message InventoryInformationRequest {
    string item_id = 1;
}

message InventorySyncRequest {
    string item_id = 1;
    int32 purchase_quantities = 2;
}

message InventorySyncResponse {
    bool result = 1;
}

message InventoryInformation {
    string item_id = 1;
    int64 quantities = 2;
}

service InventoryService {
    rpc GetItemInventory (InventoryInformationRequest) returns (InventoryInformation);

    rpc SyncInventory (InventorySyncRequest) returns (InventorySyncResponse);
}
